EDX-2400 - Adds resolution and error codes to sdc duplicate - Adds existing duplicates to the return object of getAllInDistrictCollectionDuplicates